--- a/tapcord/templates/tapcord/services.html
+++ b/tapcord/templates/tapcord/services.html
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="col-sm-4 margin30">
                     <div class="service-box">
-                        <img src="{% static 'tapcordsite/img/medical/service-1.jpg' %}" class="img-responsive" alt="">
+                        <img src="{% static 'tapcordsite/img/medical/service-1.jp' %}" class="img-responsive" alt="">
                         <i class="fa fa-medkit"></i>
                         <h4>Service 1</h4>
                         <p>
@@ -27,63 +27,7 @@
                         <a href="#" class="btn btn-theme-bg">Read more...</a>
                     </div>
                 </div><!--col end-->
-                <div class="col-sm-4 margin30">
-                    <div class="service-box">
-                        <img src="{% static 'tapcordsite/img/medical/service-2.jpg' %}" class="img-responsive" alt="">
-                        <i class="fa fa-medkit"></i>
-                        <h4>Service 2</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
-                        </p>
-                        <a href="#" class="btn btn-theme-bg">Read more...</a>
-                    </div>
-                </div><!--col end-->
-                <div class="col-sm-4 margin30">
-                    <div class="service-box">
-                        <img src="{% static 'tapcordsite/img/medical/service-3.jpg' %}" class="img-responsive" alt="">
-                        <i class="fa fa-medkit"></i>
-                        <h4>Service 3</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
-                        </p>
-                        <a href="#" class="btn btn-theme-bg">Read more...</a>
-                    </div>
-                </div><!--col end-->
-            </div><!--row end-->
-                 <div class="row">
-                <div class="col-sm-4 margin30">
-                    <div class="service-box">
-                        <img src="{% static 'tapcordsite/img/medical/service-4.jpg' %}" class="img-responsive" alt="">
-                        <i class="fa fa-medkit"></i>
-                        <h4>Service 4</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
-                        </p>
-                        <a href="#" class="btn btn-theme-bg">Read more...</a>
-                    </div>
-                </div><!--col end-->
-                <div class="col-sm-4 margin30">
-                    <div class="service-box">
-                        <img src="{% static 'tapcordsite/img/medical/service-5.jpg' %}" class="img-responsive" alt="">
-                        <i class="fa fa-medkit"></i>
-                        <h4>Service 5</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
-                        </p>
-                        <a href="#" class="btn btn-theme-bg">Read more...</a>
-                    </div>
-                </div><!--col end-->
-                <div class="col-sm-4 margin30">
-                    <div class="service-box">
-                        <img src="{% static 'tapcordsite/img/medical/service-6.jpg' %}" class="img-responsive" alt="">
-                        <i class="fa fa-medkit"></i>
-                        <h4>Service 6</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
-                        </p>
-                        <a href="#" class="btn btn-theme-bg">Read more...</a>
-                    </div>
-                </div><!--col end-->
+               
             </div><!--row end-->
         </div>
         <!--services container-->
