--- a/blog/templates/blog/blogbase.html
+++ b/blog/templates/blog/blogbase.html
@@ -18,7 +18,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#!">Tapcord Engineering</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Tapcord Engineering</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -34,6 +34,14 @@
         <!-- Page header with logo and tagline-->
         
         <!-- Page content-->
+        <header class="py-5 bg-light  border-bottom mb-4">
+            <div class="container">
+                <div class="text-center my-5">
+                    <h1 class="fw-bolder">Tapcord</h1>
+                    <p class="lead mb-0">Keeping you updated with latest industry info</p>
+                </div>
+            </div>
+        </header>
         {% block content %}
         {% endblock %}
 
