added the tynimc editor without filebrowser

--- a/tapcord/templates/tapcord/about.html
+++ b/tapcord/templates/tapcord/about.html
@@ -20,7 +20,7 @@
                 <div class="col-md-12">
                     <h1>Welcome to <strong>Tapcord Engineering</strong></h1>
                     <p class="lead">
-                        If you need a professional hands to help you achieve your project goals then you are in the right place
+                        Do you need professional hands to help you achieve your project goals then you are in the right place.
                     </p>
                 </div>
             </div><!--end row-->
