--- a/tapcord/templates/tapcord/home.html
+++ b/tapcord/templates/tapcord/home.html
@@ -75,7 +75,7 @@
               <i class="glyphicon glyphicon-hdd"></i>
               <h4>Electrical Services </h4>
               <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt. 
+                Experience the power of efficient electricity with our top-notch electrical services. We ensure safe and sustainable solutions for all your electrical needs. Contact us today
               </p>
           </div>
       </div><!--service column-->
@@ -93,7 +93,7 @@
               <i class="glyphicon glyphicon-scale"></i>
               <h4>Plumbing services</h4>
               <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt. 
+                From bathroom renovations to kitchen upgrades, our plumbing engineering services can make your dream home a reality. Let's start planning your project today.
               </p>
           </div>
       </div><!--service column-->
@@ -102,7 +102,7 @@
               <i class="glyphicon glyphicon-tower"></i>
               <h4>Facility management</h4>
               <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt. 
+                With our preventative maintenance services, you can avoid costly repairs and downtime. We keep your facilities running smoothly so you can keep your business moving forward. 
               </p>
           </div>
       </div><!--service column-->
