--- a/tapcordsite/templates/tapcordsite/included/navbars.html
+++ b/tapcordsite/templates/tapcordsite/included/navbars.html
@@ -42,7 +42,7 @@
                 <li><a href="">Shop</a></li>
 
                 <li><a href="{% url 'contact' %}">Contact us</a></li>
-                <li><a href="{% url 'viewposts' %}">View post</a></li>
+                <li><a href="{% url 'viewposts' %}">Blog</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
