--- a/tapcord/templates/tapcord/contact.html
+++ b/tapcord/templates/tapcord/contact.html
@@ -14,10 +14,31 @@
                 </div>
             </div>
         </div><!--breadcrumb-->
+
+        <div class="header-image" data-stellar-background-ratio="0.5"></div>
+        <div class="divide70"></div>
         <!--g map start-->
-        <div id="map-canvas" style="width: 100%; height: 400px;"></div>
+        <!-- <div id="map-canvas" style="width: 100%; height: 400px;"></div> -->
         <!--g map end-->
         <div class="divide70"></div>
+        <div class="ads-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 text-center contact-h4">
+                        <h3>Need A Technician Contact Us Today</h3>
+                        <h4 class="white">To learn more about our electrical, plumbing and facility management services you can give us a call on <a href="callto:+2348140790116">+234 81 407 901 16</a></h4>
+                        <h4>You can request for a quote or home services for electrician or plumber by contacting us through the form bellow </h4>
+                        <h6 class="contact-h6"> Our professional technicians take great pride in providing high quality services at an affordablel price.</h6>
+                        <h6 class="contact-h6">We are here to serve you let us know what you need and we would be glad to help you out.</h6>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <!-- <h4>still have a question please give us a direct call</h4> -->
+                        <a href="callto:+2348140790116" class="btn btn-white-border btn-lg">Call Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+         
 
         <div class="container">
             <div class="row">
@@ -60,7 +81,8 @@
             </div>
         </div>
 		<div class="divide30"></div>
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+        <!-- the map function starts here -->
+        <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
         <script type="text/javascript">
             var myLatlng;
             var map;
@@ -96,6 +118,7 @@
             }
 
             google.maps.event.addDomListener(window, 'load', initialize);
-        </script>
+        </script> -->
+        <!-- the map function ends here -->
 
 {% endblock %}
