--- a/tapcordsite/templates/tapcordsite/included/video_section.html
+++ b/tapcordsite/templates/tapcordsite/included/video_section.html
@@ -29,8 +29,7 @@
   
                         <div id="collapseOne" class="panel-collapse collapse in">
                             <div class="panel-body">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus odio augue, scelerisque eget erat vel, hendrerit feugiat dui. Quisque velit erat, eleifend sed ligula vel, bibendum accumsan justo. Sed in justo ac massa suscipit tincidunt. Integer ac mauris ut dolor lobortis ullamcorper. Duis facilisis vitae odio ut commodo. Etiam et enim est. Sed ultrices hendrerit euismod. Aliquam lobortis rutrum adipiscing.
-                            </div><!-- /.panel-body -->
+                                Our team is equipped to handle all types of electrical and plumbing installations. From lighting fixtures to complex plumbing systems, we've got you covered. Light up your space with us today
                         </div><!-- /.panel-heading -->
                     </div><!-- /.panel -->
   
@@ -38,14 +37,14 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                                    years of experience in the industry
+                                    Commitment to service
                                 </a>
                             </h4>
                         </div><!-- /.panel-heading -->
   
                         <div id="collapseTwo" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Praesent rutrum arcu lacus, nec consectetur mauris pellentesque sit amet. Nulla facilisi. Donec tempor nunc in varius fermentum. Nulla eget vulputate neque. Sed ultricies viverra augue, ut accumsan metus malesuada id. Cras ultrices arcu nec mauris consequat, viverra accumsan enim vulputate. Nunc auctor, dolor et aliquet consequat, sapien leo viverra felis, ac gravida purus libero sit amet eros. Nam iaculis augue vitae rhoncus elementum. In hac habitasse platea dictumst. Morbi aliquet adipiscing elit, at convallis massa fringilla et.
+                                Your home deserves the best! Our comprehensive residential services ensure your living space is safe, energy-efficient, well-lit and conducive
                             </div><!-- /.panel-body -->
                         </div><!-- /.panel-collapse -->
                     </div><!-- /.panel -->
@@ -61,7 +60,7 @@
   
                         <div id="collapseThree" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Phasellus mattis dignissim neque vel tincidunt. Nam posuere nisl at erat mollis euismod. Cras diam diam, luctus vitae metus vitae, porttitor porttitor lorem. Integer feugiat justo in lectus dignissim consectetur. Aliquam vel fringilla neque. Pellentesque eget arcu ac ante pulvinar malesuada et id erat. Praesent mattis porta arcu placerat pellentesque. Maecenas ullamcorper dui non est elementum aliquam.
+                                Professional. Reliable. Affordable. That’s the service we aim to provide. Let us handle any of your projects and experience the difference.
                             </div><!-- /.panel-body -->
                         </div><!-- /.panel-collapse -->
                     </div><!-- /.panel -->
@@ -77,7 +76,7 @@
   
                         <div id="collapseFour" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Cras sed nunc eu lectus feugiat ultricies lobortis eget mi. Nam et nulla venenatis, luctus lacus eget, pharetra lacus. Nam facilisis congue nibh et iaculis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed vel commodo lectus. Curabitur tellus nunc, bibendum viverra quam sed, tempor posuere dui. Aliquam a lectus ligula. Mauris congue, urna ac ullamcorper dapibus, lacus sapien consectetur tortor, vel semper ligula eros ut urna. Quisque egestas et lectus in faucibus.
+                                Our mission is to provide you with services that exceed your expectations. We value our customers and strive to provide exceptional customer service before, during, and after the completion of the project.
                             </div><!-- /.panel-body -->
                         </div><!-- /.panel-collapse -->
                     </div><!-- /.panel -->
