some style touch up

--- a/tapcord/templates/tapcord/services.html
+++ b/tapcord/templates/tapcord/services.html
@@ -27,6 +27,30 @@
                         <a href="#" class="btn btn-theme-bg">Read more...</a>
                     </div>
                 </div><!--col end-->
+
+                <div class="col-sm-4 margin30">
+                    <div class="service-box">
+                        <img src="{% static 'tapcordsite/img/medical/service-1.jp' %}" class="img-responsive" alt="">
+                        <i class="fa fa-medkit"></i>
+                        <h4>Service 1</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
+                        </p>
+                        <a href="#" class="btn btn-theme-bg">Read more...</a>
+                    </div>
+                </div><!--col end-->
+
+                <div class="col-sm-4 margin30">
+                    <div class="service-box">
+                        <img src="{% static 'tapcordsite/img/medical/service-1.jp' %}" class="img-responsive" alt="">
+                        <i class="fa fa-medkit"></i>
+                        <h4>Service 1</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
+                        </p>
+                        <a href="#" class="btn btn-theme-bg">Read more...</a>
+                    </div>
+                </div><!--col end-->
                
             </div><!--row end-->
         </div>
