--- a/tapcord/templates/tapcord/home.html
+++ b/tapcord/templates/tapcord/home.html
@@ -114,8 +114,10 @@
 </div>
 <div class="divide60"></div>
 
+{% include "included/important_tips.html" %}
 
 <!-- Meet our team or specialist section -->
+
 {% include 'included/home_service_banner.html' %}
 {% include 'included/quick_contact_form.html' %}
 
