--- a/tapcord/templates/tapcord/services.html
+++ b/tapcord/templates/tapcord/services.html
@@ -19,10 +19,10 @@
                 <div class="col-sm-4 margin30">
                     <div class="service-box">
                         <img src="{% static 'tapcordsite/img/medical/service-1.jp' %}" class="img-responsive" alt="">
-                        <i class="fa fa-medkit"></i>
-                        <h4>Service 1</h4>
+                        <i class="fa fa-service"></i>
+                        <h4>Electrical services</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
+                            Experience the power of efficient electricity with our top-notch electrical services. We ensure safe and sustainable solutions for all your electrical needs. Contact us today        
                         </p>
                         <a href="#" class="btn btn-theme-bg">Read more...</a>
                     </div>
@@ -31,10 +31,10 @@
                 <div class="col-sm-4 margin30">
                     <div class="service-box">
                         <img src="{% static 'tapcordsite/img/medical/service-1.jp' %}" class="img-responsive" alt="">
-                        <i class="fa fa-medkit"></i>
-                        <h4>Service 1</h4>
+                        <i class="fa fa-service"></i>
+                        <h4>Plumbing services</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
+                            From bathroom renovations to kitchen upgrades, our plumbing engineering services can make your dream home a reality. Let's start planning your project today.
                         </p>
                         <a href="#" class="btn btn-theme-bg">Read more...</a>
                     </div>
@@ -43,11 +43,11 @@
                 <div class="col-sm-4 margin30">
                     <div class="service-box">
                         <img src="{% static 'tapcordsite/img/medical/service-1.jp' %}" class="img-responsive" alt="">
-                        <i class="fa fa-medkit"></i>
-                        <h4>Service 1</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
-                        </p>
+                        <i class="fa fa-service"></i>
+                             <h4>Facility management</h4>
+                            <p>
+                                With our preventative maintenance services, you can avoid costly repairs and downtime. We keep your facilities running smoothly so you can keep your business moving forward. 
+                            </p>
                         <a href="#" class="btn btn-theme-bg">Read more...</a>
                     </div>
                 </div><!--col end-->
