--- a/tapcordsite/templates/tapcordsite/included/navbars.html
+++ b/tapcordsite/templates/tapcordsite/included/navbars.html
@@ -26,13 +26,13 @@
                     </ul>
                 </li>
                 <!-- ***** -->
-                <!-- <li><a href="{% url 'team' %}">Our Team</a></li> -->
+                <!-- <li><a href="">Our Team</a></li> -->
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
+                    <a href="{% url 'services' %}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'services' %}">plumbing</a></li>
-                        <li><a href="{% url 'services' %}">Electrical</a></li>
-                        <li><a href="{% url 'services' %}">Facility management</a></li>
+                        <li><a href="{% url 'plumbing' %}">plumbing</a></li>
+                        <li><a href="{% url 'electrical' %}">Electrical</a></li>
+                        <li><a href="{% url 'facility' %}">Facility management</a></li>
                         <!-- <li><a href="{% url 'services' %}">Emergency Room</a></li> -->
 
                     </ul>
