solar system service update

--- a/tapcord/templates/tapcord/about.html
+++ b/tapcord/templates/tapcord/about.html
@@ -20,7 +20,7 @@
                 <div class="col-md-12">
                     <h1>Welcome to <strong>Tapcord Engineering</strong></h1>
                     <p class="lead">
-                        Do you need professional hands to help you achieve your project goals then you are in the right place.
+                        Welcome to Tapcord Engineering, your premier destination for top-notch Electrical, Plumbing, and Facility Management solutions. With a wealth of industry experience, we stand as a beacon of excellence, providing a comprehensive range of services that exceed expectations.
                     </p>
                 </div>
             </div><!--end row-->
@@ -79,17 +79,58 @@
                          <li><i class="fa fa-check-square"></i>Heat pumps and installation</li>
                          <li><i class="fa fa-check-square"></i>installation of sanitary wares</li>
                          <li><i class="fa fa-check-square"></i>Household, commercial & industrial building renovations/maintenance/li>
-                         <li><i class="fa fa-check-square"></i>Heat detector and fire alarm system/li>
+                         <li><i class="fa fa-check-square"></i>Heat detector and fire alarm system</li>
                          <li><i class="fa fa-check-square"></i>Block drain Fixes</li>
                          <li><i class="fa fa-check-square"></i>Liking pipe fixes</li>
                      </ul>
 
+                     <h4>
+                        Solar inverter services
+                    </h4>
+                     
+                     <ul class="list-unstyled">
+                         <li><i class="fa fa-check-square"></i>Sales</li>
+                         <li><i class="fa fa-check-square"></i>Supply</li>
+                         <li><i class="fa fa-check-square"></i>Design</li>
+                         <li><i class="fa fa-check-square"></i>Maintenance and repair</li>
+                         <li><i class="fa fa-check-square"></i>Installation</li>
 
-                    <p>
+                     </ul>
+
+
+                     <h4>
+                        Our Commitment to excellence:
+                     </h4>
+                     <P>
+                        At the heart of Tapcord Engineering is an unwavering commitment to excellence. We approach each project with meticulous attention to detail, ensuring that every aspect is executed to perfection. Our dedication to quality craftsmanship is reflected in the durability and efficiency of the systems we install.
+                     </P>
+
+                     <h4>
+                        Customer Satisfaction:
+                     </h4>
+                     <P>
+                        Customer satisfaction is not just a goal for us—it's a promise. We prioritize open communication, actively listening to your needs and concerns. From the initial consultation to the final installation, our team is with you every step of the way, ensuring that your vision becomes a reality. Your satisfaction is our measure of success.
+                     </P>
+
+                     <h4>
+                        Sustainability Matters:
+                     </h4>
+                     <P>
+                        In an era where sustainability is key, Tapcord Engineering is proud to play a role in shaping a greener future. Our Solar Inverter systems exemplify our commitment to environmentally conscious solutions, harnessing renewable energy to reduce carbon footprints and energy costs. We believe in building a world where efficiency meets sustainability, and we're dedicated to making that vision a reality.
+                     </P>
+
+                     <h4>
+                        Why Choose Us
+                    </h4>
+                    <P>       
+                        Choosing Tapcord Engineering  means choosing a partner that values expertise, excellence, customer satisfaction, and sustainability. Join us on the journey towards a brighter, more sustainable future—where cutting-edge technology meets unparalleled service.
+                    </P>
+                     
+                    <!-- <p>
                     	We are your reliable partner for all your electrical, plumbing and facility management needs. we offer exceptional services and solution for our residential, commercial and industrial clients.
                         with years of experience in the industry we take great pride in our experties, reliability and commitment to service, having realised that clients success is our drive therefore we go above and 
                         beyond to ensure that we delever the right result and at the right time.
-                    </p>
+                    </p> -->
                     <p>
                         so therefore if accomplishment is what you seek<a class="second-head" href="{% url 'contact' %}"> CONTACT US</a> today we would be more eager to guide and assist you.
                     </p>
