--- a/tapcord/templates/tapcord/contact.html
+++ b/tapcord/templates/tapcord/contact.html
@@ -15,7 +15,7 @@
             </div>
         </div><!--breadcrumb-->
 
-        <div class="header-image" data-stellar-background-ratio="0.5"></div>
+        <!-- <div class="header-image" data-stellar-background-ratio="0.5"></div> -->
         <div class="divide70"></div>
         <!--g map start-->
         <!-- <div id="map-canvas" style="width: 100%; height: 400px;"></div> -->
@@ -28,8 +28,8 @@
                         <h3>Need A Technician Contact Us Today</h3>
                         <h4 class="white">To learn more about our electrical, plumbing and facility management services you can give us a call on <a href="callto:+2348140790116">+234 81 407 901 16</a></h4>
                         <h4>You can request for a quote or home services for electrician or plumber by contacting us through the form bellow </h4>
-                        <h6 class="contact-h6"> Our professional technicians take great pride in providing high quality services at an affordablel price.</h6>
-                        <h6 class="contact-h6">We are here to serve you let us know what you need and we would be glad to help you out.</h6>
+                        <h4 class="contact-p-white"> Our professional technicians take great pride in providing high quality services at an affordablel price.</h4>
+                        <h4 class="contact-p-white">We are here to serve you let us know what you need and we would be glad to help you out.</h4>
                     </div>
                     <div class="col-md-4 text-center">
                         <!-- <h4>still have a question please give us a direct call</h4> -->
