--- a/tapcord/templates/tapcord/home.html
+++ b/tapcord/templates/tapcord/home.html
@@ -24,6 +24,12 @@
                 <div class="carousel-caption"> <span class="second-head">Advanced</span> home automations with fine finishing. 
               </div>
           </div>
+          <!-- solar services -->
+          <div class="item"> 
+            <img src="{% static 'tapcordsite/img/slider/tapcord_barnner.jpeg' %}" alt="...">
+              <div class="carousel-caption"> <span class="second-head">Advanced</span> sola inverter installation services. 
+            </div>
+        </div>
           <div class="item"> 
               <img src="{% static 'tapcordsite/img/slider/slide5.jpg' %}" alt="...">
               <div class="carousel-caption"> <span class="second-head">Perfect</span> Sanitary installation
@@ -120,6 +126,8 @@
 
 {% include 'included/home_service_banner.html' %}
 {% include 'included/quick_contact_form.html' %}
+
+{% include 'included/galary_section.html'%}
 
 
 
