--- a/tapcordsite/templates/tapcordsite/included/navbars.html
+++ b/tapcordsite/templates/tapcordsite/included/navbars.html
@@ -33,6 +33,7 @@
                         <li><a href="{% url 'plumbing' %}">plumbing</a></li>
                         <li><a href="{% url 'electrical' %}">Electrical</a></li>
                         <li><a href="{% url 'facility' %}">Facility management</a></li>
+                        <li><a href="{% url 'facility' %}">Solar inverter </a></li>
                         <!-- <li><a href="{% url 'services' %}">Emergency Room</a></li> -->
 
                     </ul>
