made some copywriting changes in

--- a/tapcord/templates/tapcord/contact.html
+++ b/tapcord/templates/tapcord/contact.html
@@ -25,11 +25,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 text-center contact-h4">
-                        <h3>Need A Technician Contact Us Today</h3>
-                        <h4 class="white">To learn more about our electrical, plumbing and facility management services you can give us a call on <a href="callto:+2348140790116">+234 81 407 901 16</a></h4>
-                        <h4>You can request for a quote or home services for electrician or plumber by contacting us through the form bellow </h4>
-                        <h4 class="contact-p-white"> Our professional technicians take great pride in providing high quality services at an affordablel price.</h4>
-                        <h4 class="contact-p-white">We are here to serve you let us know what you need and we would be glad to help you out.</h4>
+                        <h3>Get Expert Help Today!</h3>
+                        <p style="color:white; font-weight: bold;">                     
+                            Need a reliable technician to tackle your electrical, plumbing, or facility management issues? Look no further! Our team of professionals is dedicated to providing top-notch services at an affordable price.
+                            Ready to learn more? Give us a call at <a href="callto:+2348140790116">+234 81 407 901 16</a> or fill out the form below to request a quote or schedule a service appointment. Our friendly and experienced technicians are here to help you with all your electrical and plumbing needs.
+                            At Tapcord Engineering, we take pride in our work and strive to exceed your expectations. Whether you need a quick fix or a long-term solution, we're here to serve you. So why wait? Contact us today and let us know how we can assist you!"
+                        
+                        </p>
+                        
+                        
                     </div>
                     <div class="col-md-4 text-center">
                         <!-- <h4>still have a question please give us a direct call</h4> -->
